# caustix-viewer

./: .gitignore  Cargo.toml
assets/shaders/: tri_vert.glsl  tri_vert.spv
crates/caustix/: Cargo.toml
crates/cvk/: Cargo.toml
crates/cvk/macros/: Cargo.toml
crates/cvk/macros/src/: lib.rs  macro_impl.rs
crates/cvk/src/: core.rs  lib.rs  pipeline.rs  resource.rs  sync.rs
crates/cvk/src/core/: command_buffer.rs  context.rs  device.rs  format.rs  handle.rs  instance.rs
crates/cvk/src/pipeline/: shader.rs
crates/cvk/src/resource/: buffer.rs  image.rs
crates/utils/: Cargo.toml
crates/utils/macros/src/: lib.rs  macro_impl.rs
crates/utils/src/: build.rs  lib.rs  region.rs  span.rs
src/: app.rs  main.rs
