[package]
name = "caustix-viewer"
version = "0.1.0"
edition = "2024"
authors = ["Christian Mulser"]
license = "GPL-3.0"

[dependencies]
winit = { workspace = true }
cvk = { path = "crates/cvk" }
utils = { path = "crates/utils" }

[workspace]
members = [
    ".",
    "crates/*",
    "crates/cvk/macros",
    "crates/utils/macros"
]

[workspace.dependencies]
winit = "0.30.12"

proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"