[package]
name = "cvk"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { workspace = true }
raw-window-handle = "0.6.2"
ash = "0.38.0"
vk-mem = "0.5.0"
ash-window = "0.13.0"
shaderc = "0.10.1"

parking_lot = "0.12.5"
bitflags = "2.10.0"

utils = { path = "../utils" }

cvk-macros = { path = "macros" }
